--- a/expand-return-struct.adoc
+++ b/expand-return-struct.adoc
@@ -1,4 +1,4 @@
-[%auto-animate.columns]
+[%auto-animate%auto-animate-restart.columns]
 = Return ``struct``s
 
 [.column.is-half%step]
@@ -66,7 +66,7 @@ you can add a method to the returned object...
 --
 
 [%auto-animate.columns]
-== Return ``struct``s
+= Return ``struct``s
 
 [.column.is-half]
 --
