--- a/side-initialize.adoc
+++ b/side-initialize.adoc
@@ -1,27 +1,25 @@
-= Initializing complex objects
+= Initializing objects
 
 [.notes]
 --
-As a quick tangent, I want to talk about object initialization.
+As a tangent, I want to quickly talk about object initialization.
 
 I just mentioned parameter objects and functional options.
-These both allow for two different ways to initialize complex objects.
+These allow for two different ways to initialize complex objects.
 But they're not the only ways.
-
-One of the best and easiest ways to initialize objects is...
 --
 
 [.columns]
 == Usable zero value
 
-[.column]
+[.column.is-one-third]
 --
 [source, go]
 ----
 var (
-  buff   bytes.Buffer
-  lock   sync.Mutex
-  client http.Client
+  buff bytes.Buffer
+  lock sync.Mutex
+  tree MyTree[int]
 )
 ----
 --
@@ -30,6 +28,7 @@ var (
 --
 [%hardbreaks]
 👍 Easy
+👍 Extend with exported fields
 
 [.medium]
 Prefer when possible
@@ -37,17 +36,13 @@ Prefer when possible
 
 [.notes]
 --
-A `var` declaration.
+For simple-enough objects, make is so that their zero value is usable --
+so that it's possible to declare it with just a `var`.
+These objects can still export fields to customize the default behaviors,
+but should be usable without doing so.
 
-Where possible, objects should have a usable zero value.
-
-They may export fields to customize any of the default behaviors.
-It acts like a parameter object
-where the behaviors are on the object itself.
-
-This makes for the simplest usage experience.
-
-This isn't always possible. In fact, it's a rarity.
+Of course, objects that meet this criteria are not super common.
+There are usually at least one or two required dependencies.
 --
 
 [.columns]
@@ -68,30 +63,27 @@ type PrefixWriter struct {
 --
 [%hardbreaks]
 👍 Easy
-👎 Repeated validation
+👎 Validate repeatedly
 
 [.medium]
-Prefer for 1-2 methods
+Prefer for objects with 1-2 methods
 --
 
 [.notes]
 --
-So if there are one or two fields that must be set,
-you can still get away with just a vanilla struct with public fields.
+In that case, we can still get away with vanilla structs;
+we just have to say which fields are required.
 
-This is easy and it works well for simple objects and abstractions.
+This is easy to use,
+but it's a bit annoying if you have too many methods.
+Because there's no enforcement that the required fields are set,
+they have to be checked at every entry point -- every method.
+Someone will forget a method somewhere and then it'll explode at runtime.
 
-The part that's annoying about it is that
-there's no way to enforce that the field is set.
-Only documentation.
+But I think this is worth it if you have only one or two methods.
+It's hard to miss validation there, and you get something super easy to use.
 
-So you have to validate the field at every entry point
-or have the code explode in fun ways.
-
-But I think it's worth it if you have a data-only object
-or only one or two methods on the object.
-
-That brings us to constructor territory.
+When you can't do this, it's time to write constructors.
 --
 
 [.columns.wrap]
@@ -154,17 +146,16 @@ Only if worth it
 
 [.notes]
 --
-For constructors,
-we can use positional arguments,
-or as just discussed,
-parameter objects or functional options.
+For constructors, prefer them in this order:
 
-They have their tradeoffs,
-so prefer them in this order.
+* Use positional arguments for 3 or fewer inputs --
+  assuming that's all you'll ever need.
+* Use a parameter object if you have more inputs than that.
+* Use functional options if the boilerplate and complexity is worth it.
 --
 
 [.columns.wrap]
-== Initialization summary
+== Initializing objects
 
 [.column.is-full.medium]
 In-order, prefer...
@@ -189,11 +180,12 @@ Constructor
 
 [.notes]
 --
-In summary:
+So in summary, to initialize objects:
 
 * Prefer plain objects with a usable zero value
-  or with required exported fields if the number of entry points is low.
-* If you need a constructor,
+  or with required fields if the number of methods is small.
+* Or if you need a constructor,
   prefer positional arguments, parameter object, or functional options,
-  in that order depending on the number of arguments and complexity.
+  in that order depending on the number of arguments
+  and your appetite for complexity.
 --
