--- a/expand-accept-iface.adoc
+++ b/expand-accept-iface.adoc
@@ -53,7 +53,7 @@ type HTTPClient interface {
   Do(*http.Request) (*http.Response, error)
 }
 
-func Login(c *HTTPClient) (Token, error)
+func Login(c HTTPClient) (Token, error)
 ----
 
 |====
@@ -118,7 +118,7 @@ Parse(&countLines{file}) // oops!
 
 [column]
 --
-[source%linenums,go,data-id=Parse]
+[source%linenums,go,data-id=Parse,highlight="1,3-5"]
 ----
 func Parse(r io.Reader) (Node, error) {
   name := "<unknown>"
